--- a/style.css
+++ b/style.css
@@ -1,19 +1,64 @@
+*{
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    font-family: 'montserrat';
 
-
-
-
-
+}
+.montserrat {
+    font-family: "montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+a:hover {
+    color: silver;
+    transform: rotatey('30');
+}
+a:link {
+    color: yellow;
+}
+a:visited {
+    color: white;
+}
+a:active {
+    color: green;
+}
 
 /* ----------------------------------- Navigation Menu Style  ----------------------------------*/
 
-
-
-
-    
+.btn-primary {
+    height: 45px;
+    background-color: rgb(35, 166, 240);
+    border-color:  rgb(35, 166, 240);
+}
 
 /* ----------------------------------- Hero Banner / First Section Styles  ---------------------------------*/
 
-
+#section1 {
+    padding-top: 15%;
+    padding-bottom: 10%;
+    background-image:linear-gradient(to right,
+        rgba(0, 0, 0, 1), 
+        rgba(0, 0, 0, 0)), url('./assets/hero.jpg') ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: white;   
+}
+.container{
+    padding-left: 10%;
+}
+h1 {
+    font-size: 4rem;
+    font-family: 'montserrat';
+    font-weight: 700;
+}
+.btn-secondary {
+    border-radius: 100px;
+    border-color: white;
+    background: transparent;
+}
 
 
 
@@ -53,6 +98,4 @@
 
       
 /* ------------------------------------------------- Footer Style  ----------------------------------------------*/
-*{
-    text-decoration: none;
-}
+
