--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@media screen and (max-width: 768px) {
+    .navbar-nav {
+        background-color: rgb(37, 43, 66,0.5);
+        display:block;
+        text-align: center;
+    }
+    
+    .btn-primary {
+        height: 45px;
+        background-color: rgb(35, 166, 240);
+        border-color:  rgb(35, 166, 240);
+        opacity: 1;
+    }
+}
 *{
     text-decoration: none;
     list-style: none;
@@ -33,6 +47,7 @@ a:active {
     border-color:  rgb(35, 166, 240);
 }
 
+
 /* ----------------------------------- Hero Banner / First Section Styles  ---------------------------------*/
 
 #section1 {
@@ -50,7 +65,6 @@ a:active {
     padding-left: 10%;
 }
 h1 {
-    font-size: 4rem;
     font-family: 'montserrat';
     font-weight: 700;
 }
@@ -65,18 +79,52 @@ h1 {
      
 /* ---------------------------------------------- Second Section Styles   ----------------------------------------------*/
 
+#section2 {
+    background-color: rgb(37, 43, 66);
+}
+.card-img-top {
+    max-width: 60px;
+    align-self: center;
+}
 
-
+.card {
+    background-color: rgb(37, 43, 66);
+    max-width: 90%;
+    padding: 5%;
+    font-size: 0.9rem;
+   
+}
+.card-title {
+    color: white;
+    text-align: center;
+    padding-top:3%;
+    padding-bottom: 3%;
+}
 
 
        
 /* ----------------------------------------------  Third Section Styles  ----------------------------------------------*/
 
 
+.card2  {
+    margin: 5%;
+    background-color: white;
+    max-width: 100%;
+    padding: 1%;
+    text-align: center;
+    font-size: 0.9rem;
+    
+}
+.card-body2 .card-text {
+    color: black;
+}
+.card-body2 .card-title {
+    color: black;
+}
+.card-body2 {
+    padding: 8%;
+}
 
-
-
-        
 /* ---------------------------------------------- Fourth Section Styles   ----------------------------------------------*/
 
 
